--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,30 +24,33 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Run type check
-        run: npx tsc --noEmit
+        run: npm run type-check
 
       - name: Run ESLint
         run: npm run lint
 
       - name: Run Prettier check
-        run: npx prettier --check .
+        run: npm run prettier:check
 
       - name: Run tests
-        run: npm run test
+        run: npm run test:coverage
+
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          fail_ci_if_error: false
 
       - name: Build Storybook
         run: npm run build-storybook
 
-      - name: Run Storybook tests
-        run: npm run test-storybook
-
-  build:
-    name: Build
+  security:
+    name: Security Audit
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -59,7 +62,32 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
+
+      - name: Run security audit
+        run: npm audit --audit-level=moderate
+        continue-on-error: true
+
+      - name: Check for outdated packages
+        run: npm outdated
+        continue-on-error: true
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [test, security]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
 
       - name: Build application
         run: npm run build
@@ -72,11 +100,12 @@ jobs:
         with:
           name: build-files
           path: .next
+          retention-days: 30
 
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [test, security, build]
     if: github.ref == 'refs/heads/develop'
     environment:
       name: staging
@@ -94,10 +123,16 @@ jobs:
           vercel-args: '--prod'
           scope: ${{ secrets.VERCEL_ORG_ID }}
 
+      - name: Health check (Staging)
+        run: |
+          echo "Waiting for deployment to be ready..."
+          sleep 60
+          curl -f https://aerolab-challenge-staging.vercel.app/api/health || exit 1
+
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [test, security, build]
     if: github.ref == 'refs/heads/main'
     environment:
       name: production
@@ -115,7 +150,13 @@ jobs:
           vercel-args: '--prod'
           scope: ${{ secrets.VERCEL_ORG_ID }}
 
-      - name: Health check
+      - name: Health check (Production)
         run: |
-          sleep 30
-          curl -f https://aerolab-challenge.vercel.app/api/health || exit 1 
+          echo "Waiting for deployment to be ready..."
+          sleep 60
+          curl -f https://aerolab-challenge.vercel.app/api/health || exit 1
+
+      - name: Notify deployment success
+        run: |
+          echo "✅ Production deployment successful!"
+          echo "🚀 App URL: https://aerolab-challenge.vercel.app" 
