--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
@@ -72,6 +73,7 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.11",
     "playwright": "^1.49.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "storybook": "^8.4.7",
