--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.5.5",
     "zod": "^3.24.1"
